Fix intro spacing

--- a/src/sass/imports/_sections.scss
+++ b/src/sass/imports/_sections.scss
@@ -328,3 +328,9 @@
     width: 100%;
   }
 }
+
+
+#intro {
+  margin-top: -6em;
+  margin-bottom: 3em;
+}
